--- a/code/sort/insertion_sort.ipynb
+++ b/code/sort/insertion_sort.ipynb
@@ -5,7 +5,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def insertion_sort(arr):\n",
+    "    for i in range(1, len(arr)):\n",
+    "        key = arr[i]\n",
+    "        j = i - 1\n",
+    "        while j >= 0 and key < arr[j]:\n",
+    "            arr[j + 1] = arr[j]\n",
+    "            j -= 1\n",
+    "        arr[j + 1] = key\n",
+    "    return arr"
+   ]
   }
  ],
  "metadata": {
